<resources>
    <string name="app_name">FreshPlayer</string>
    <string name="title_activity_home_screen">PlayList</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">FRESH PRINCE</string>
    <string name="nav_header_subtitle">kuzorian247@yahoo.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_search">Search</string>
    <string name="artists_image">image of artist</string>
    <string name="favouriteSongs">Favourite</string>
    <string name="galleryAlbum">Album</string>
    <string name="gridViewSongs">GridView</string>
    <string name="setting">Settings</string>
    <string name="backgroundImage">backgroundImg</string>
    <string name="libraryItem">Library</string>
    <string name="videosItem">Videos</string>
    <string name="list">LIST</string>
    <string name="freshimage">freshImage</string>
    <string name="backImage">backImage</string>
    <string name="headImage">headImage</string>
    <string name="arrowBack">arrowBack</string>
    <string name="nowPlaying">NOW PLAYING</string>
    <string name="moreImg">moreImg</string>
    <string name="fake_love">FAKE LOVE</string>
    <string name="duncan_mighty_ft_wiz_kid">Duncan Mighty ft Wiz Kid</string>
    <string name="artImage">artImage</string>
    <string name="repeat">Repeat</string>
    <string name="previous">Previous</string>
    <string name="play">play</string>
    <string name="playText">Play</string>
    <string name="next">Next</string>
    <string name="expand">Expand</string>
    <string name="playImage">playImage</string>
    <string name="favorite_song">Favorite song</string>
    <string name="korede_bello">korede bello</string>
    <string name="play_next">PLAY NEXT</string>
    <string name="all_songs">All Songs</string>
    <string name="imageArt">imageArt</string>
</resources>
